mobile web ui improvements

--- a/frontend/translations/de.json
+++ b/frontend/translations/de.json
@@ -77,6 +77,13 @@
         "billingRemoved": "Alle Abrechnungsdaten werden entfernt",
         "scheduled30Days": "Dein Konto wird für die Löschung in 30 Tagen eingeplant",
         "gracePeriod": "Du kannst diese Anfrage jederzeit innerhalb der 30-tägigen Frist stornieren. Nach 30 Tagen werden alle deine Daten dauerhaft gelöscht und können nicht wiederhergestellt werden.",
+        "chooseDeletionType": "Löschungsart wählen:",
+        "gracePeriodOption": "30-Tage-Frist",
+        "gracePeriodDescription": "Dein Konto wird für die Löschung in 30 Tagen eingeplant. Du kannst diese Anfrage jederzeit innerhalb der Frist stornieren.",
+        "immediateOption": "Sofortige Löschung",
+        "immediateDescription": "Dein Konto und alle Daten werden sofort dauerhaft gelöscht. Diese Aktion kann nicht rückgängig gemacht werden.",
+        "warningImmediate": "Diese Aktion kann nicht rückgängig gemacht werden",
+        "warningGracePeriod": "Diese Aktion kann nach 30 Tagen nicht rückgängig gemacht werden",
         "confirmText": "Tippe delete zur Bestätigung",
         "confirmPlaceholder": "delete",
         "keepAccount": "Konto behalten",
@@ -86,19 +93,25 @@
       }
     },
     "referrals": {
-      "title": "Empfehlungsprogramm",
-      "description": "Teile deinen Empfehlungslink mit Freunden. Wenn sie sich anmelden und ein Konto erstellen, verdienst du",
-      "creditsPerReferral": "100 nicht ablaufende Credits",
-      "maxEarnable": "Maximal verdienbar durch Empfehlungen:",
-      "maxCredits": "$100 in Credits",
-      "yourReferralCode": "Dein Empfehlungscode",
+      "title": "Freunde empfehlen & Credits verdienen",
+      "description": "Lade Freunde zu Kortix ein und verdient beide",
+      "creditsPerReferral": "+400 Credits",
+      "youEarn": "Du verdienst",
+      "friendGets": "Dein Freund bekommt",
+      "maxEarnable": "Maximal verdienbar:",
+      "maxCredits": "400 Credits",
+      "yourReferralCode": "Empfehlungscode",
       "referralLink": "Empfehlungslink",
+      "shareYourLink": "Teile deinen Empfehlungslink",
+      "yourStats": "Deine Statistiken",
+      "enterCodeDescription": "Gib einen Empfehlungscode ein, um Credits zu verdienen",
+      "enterCode": "Code eingeben",
       "refresh": "Aktualisieren",
       "copyCode": "Code kopieren",
       "copyLink": "Link kopieren",
       "share": "Teilen",
       "stats": {
-        "totalReferrals": "Gesamt-Empfehlungen",
+        "totalReferrals": "Empfehlungen",
         "successful": "Erfolgreich",
         "creditsEarned": "Verdiente Credits"
       },
@@ -107,8 +120,8 @@
       "pending": "Ausstehend",
       "noReferrals": "Noch keine Empfehlungen. Teile deinen Empfehlungslink, um zu starten!",
       "copied": "Kopiert!",
-      "codeCopied": "Empfehlungscode in Zwischenablage kopiert",
-      "linkCopied": "Empfehlungslink in Zwischenablage kopiert",
+      "codeCopied": "Code kopiert",
+      "linkCopied": "Link kopiert",
       "codeRefreshed": "Empfehlungscode erfolgreich aktualisiert",
       "refreshFailed": "Aktualisierung des Empfehlungscodes fehlgeschlagen"
     },
@@ -212,7 +225,7 @@
     "monthlyOn1st": "Monatlich am 1."
   },
   "sidebar": {
-    "referAndEarn": "Empfehlen & Verdienen",
+    "referAndEarn": "Empfehlen",
     "new": "Neu",
     "upgrade": "Upgrade",
     "chats": "Chats",
