--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -96,10 +96,16 @@
       "title": "Referral Program",
       "description": "Share your referral link with friends. When they sign up and create an account, you'll earn",
       "creditsPerReferral": "100 non-expiring credits",
+      "youEarn": "You earn",
+      "friendGets": "Your friend gets",
       "maxEarnable": "Maximum earnable through referrals:",
       "maxCredits": "$100 in credits",
       "yourReferralCode": "Your Referral Code",
       "referralLink": "Referral Link",
+      "shareYourLink": "Share your referral link",
+      "yourStats": "Your Stats",
+      "enterCodeDescription": "Enter a referral code to earn credits",
+      "enterCode": "Enter code",
       "refresh": "Refresh",
       "copyCode": "Copy code",
       "copyLink": "Copy link",
