--- a/frontend/translations/es.json
+++ b/frontend/translations/es.json
@@ -89,10 +89,16 @@
       "title": "Programa de Referidos",
       "description": "Comparte tu enlace de referido con amigos. Cuando se registren y creen una cuenta, ganarás",
       "creditsPerReferral": "100 créditos permanentes",
+      "youEarn": "Tú ganas",
+      "friendGets": "Tu amigo obtiene",
       "maxEarnable": "Máximo obtenible mediante referidos:",
       "maxCredits": "$100 en créditos",
       "yourReferralCode": "Tu Código de Referido",
       "referralLink": "Enlace de Referido",
+      "shareYourLink": "Comparte tu enlace de referido",
+      "yourStats": "Tus estadísticas",
+      "enterCodeDescription": "Ingresa un código de referido para ganar créditos",
+      "enterCode": "Ingresar código",
       "refresh": "Actualizar",
       "copyCode": "Copiar código",
       "copyLink": "Copiar enlace",
