--- a/frontend/translations/fr.json
+++ b/frontend/translations/fr.json
@@ -89,10 +89,16 @@
       "title": "Programme de Parrainage",
       "description": "Partage ton lien de parrainage avec tes amis. Lorsqu'ils s'inscrivent et créent un compte, tu gagnes",
       "creditsPerReferral": "100 crédits non-expirables",
+      "youEarn": "Tu gagnes",
+      "friendGets": "Ton ami obtient",
       "maxEarnable": "Maximum gagnable par parrainages:",
       "maxCredits": "$100 en crédits",
       "yourReferralCode": "Ton Code de Parrainage",
       "referralLink": "Lien de Parrainage",
+      "shareYourLink": "Partage ton lien de parrainage",
+      "yourStats": "Tes statistiques",
+      "enterCodeDescription": "Entre un code de parrainage pour gagner des crédits",
+      "enterCode": "Entrer le code",
       "refresh": "Actualiser",
       "copyCode": "Copier le code",
       "copyLink": "Copier le lien",
