--- a/frontend/translations/it.json
+++ b/frontend/translations/it.json
@@ -89,10 +89,16 @@
       "title": "Programma Referral",
       "description": "Condividi il tuo link di referral con gli amici. Quando si registrano e creano un account, guadagnerai",
       "creditsPerReferral": "100 crediti permanenti",
+      "youEarn": "Guadagni",
+      "friendGets": "Il tuo amico ottiene",
       "maxEarnable": "Massimo guadagnabile tramite referral:",
       "maxCredits": "$100 in crediti",
       "yourReferralCode": "Il Tuo Codice Referral",
       "referralLink": "Link di Referral",
+      "shareYourLink": "Condividi il tuo link di referral",
+      "yourStats": "Le tue statistiche",
+      "enterCodeDescription": "Inserisci un codice referral per guadagnare crediti",
+      "enterCode": "Inserisci codice",
       "refresh": "Aggiorna",
       "copyCode": "Copia codice",
       "copyLink": "Copia link",
