--- a/frontend/translations/ja.json
+++ b/frontend/translations/ja.json
@@ -89,10 +89,16 @@
       "title": "紹介プログラム",
       "description": "友達に紹介リンクを共有してください。サインアップしてアカウントを作成すると、獲得できます",
       "creditsPerReferral": "100個の無期限クレジット",
+      "youEarn": "あなたが獲得",
+      "friendGets": "友達が獲得",
       "maxEarnable": "紹介で獲得できる最大額:",
       "maxCredits": "$100相当のクレジット",
       "yourReferralCode": "あなたの紹介コード",
       "referralLink": "紹介リンク",
+      "shareYourLink": "紹介リンクを共有",
+      "yourStats": "あなたの統計",
+      "enterCodeDescription": "紹介コードを入力してクレジットを獲得",
+      "enterCode": "コードを入力",
       "refresh": "更新",
       "copyCode": "コードをコピー",
       "copyLink": "リンクをコピー",
