--- a/frontend/translations/pt.json
+++ b/frontend/translations/pt.json
@@ -89,10 +89,16 @@
       "title": "Programa de Indicações",
       "description": "Compartilhe seu link de indicação com amigos. Quando eles se cadastrarem e criarem uma conta, você ganhará",
       "creditsPerReferral": "100 créditos permanentes",
+      "youEarn": "Você ganha",
+      "friendGets": "Seu amigo ganha",
       "maxEarnable": "Máximo que pode ganhar através de indicações:",
       "maxCredits": "$100 em créditos",
       "yourReferralCode": "Seu Código de Indicação",
       "referralLink": "Link de Indicação",
+      "shareYourLink": "Compartilhe seu link de indicação",
+      "yourStats": "Suas estatísticas",
+      "enterCodeDescription": "Digite um código de indicação para ganhar créditos",
+      "enterCode": "Digitar código",
       "refresh": "Atualizar",
       "copyCode": "Copiar código",
       "copyLink": "Copiar link",
