--- a/frontend/translations/zh.json
+++ b/frontend/translations/zh.json
@@ -89,10 +89,16 @@
       "title": "推荐计划",
       "description": "与朋友分享您的推荐链接。当他们注册并创建账户时，您将获得",
       "creditsPerReferral": "100个永久积分",
+      "youEarn": "您获得",
+      "friendGets": "您的朋友获得",
       "maxEarnable": "通过推荐最多可获得：",
       "maxCredits": "$100积分",
       "yourReferralCode": "您的推荐码",
       "referralLink": "推荐链接",
+      "shareYourLink": "分享您的推荐链接",
+      "yourStats": "您的统计",
+      "enterCodeDescription": "输入推荐码以赚取积分",
+      "enterCode": "输入代码",
       "refresh": "刷新",
       "copyCode": "复制代码",
       "copyLink": "复制链接",
