--- a/frontend/translations/it.json
+++ b/frontend/translations/it.json
@@ -116,7 +116,18 @@
       "codeCopied": "Codice referral copiato negli appunti",
       "linkCopied": "Link di referral copiato negli appunti",
       "codeRefreshed": "Codice referral aggiornato con successo",
-      "refreshFailed": "Aggiornamento del codice referral fallito"
+      "refreshFailed": "Aggiornamento del codice referral fallito",
+      "inviteByEmail": "Invita per Email",
+      "inviteByEmailDescription": "Aggiungi fino a 3 indirizzi email (premi Invio, Spazio o Virgola)",
+      "emailAddress": "Indirizzo email",
+      "emailPlaceholder": "Inserisci indirizzi email (premi Invio, Spazio o Virgola)",
+      "emailsAdded": "email",
+      "sent": "inviato",
+      "send": "Invia",
+      "sending": "Invio...",
+      "sendAllInvites": "Invia Tutti gli Inviti",
+      "allSent": "Tutto Inviato",
+      "emailSent": "Invito di referral inviato con successo"
     },
     "billing": {
       "title": "Fatturazione & Abbonamento",
