fix: prevent Redis pubsub errors from incorrectly stopping agent runs, add stop_reason tracking + prompt improvements pres tool, speed + fe fixes

--- a/frontend/translations/fr.json
+++ b/frontend/translations/fr.json
@@ -422,6 +422,7 @@
     "credits": "Crédits",
     "popular": "Populaire",
     "creditsExplained": "Crédits expliqués",
+    "creditsExhausted": "+200 Crédits dans {time}. Mettez à niveau pour utiliser maintenant.",
     "creditsExhaustedRefreshIn": "Vous avez épuisé vos crédits. Ils seront renouvelés dans {time}",
     "trialActive": "Essai Actif",
     "trialBadge": "Essai de 7 Jours",
